--- a/assets/css/sass/_media.scss
+++ b/assets/css/sass/_media.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 798px) {
+  .page-image {
+    height: 400px;
+  }
+}
+
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
   .main-header {
@@ -39,6 +45,10 @@
   }
 }
 
+@media screen and (max-width: 660px) {
+  .page-image {
+    height: 300px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -77,7 +87,7 @@
   }
 
 .page-image {
-  height: 380px;
+  height: 200px;
 }
 
 .recent-box {
